--- a/resources/locales/zh-CN.yml
+++ b/resources/locales/zh-CN.yml
@@ -380,26 +380,25 @@ jv:
     - 文件在 `ref` 中的版本
 
   track: |
-    **追踪文件至最新事实**
+    **追踪文件至最新版本**
     **用法**：jv track <文件路径>
 
-    它不是上传，也不是下载，而是对 [[cyan]]“哪一个版本应被视为事实”[[/]] 的结果声明。
+    该操作用于声明文件的最新有效版本，而非简单的上传或下载。
 
     **创建**
-    当工作区存在未被追踪的文件时，该文件尚不存在于公认事实中
-    执行追踪将创建该文件的事实版本，写入您的表，并授予您编辑权
-    此时，您是 **该事实的撰写者**
+    当工作区存在未被追踪的文件时，该文件尚未有公认的版本。
+    执行追踪将为该文件创建版本记录，将其纳入您的表管理，并授予您编辑权。
 
     **更新**
-    当您持有文件，且基于当前最新事实进行编辑时，
-    您工作区中的版本将被视为新的最新事实
-    执行追踪将 **更新该事实到上游**
+    当您持有文件，并基于当前最新版本进行编辑后，
+    您工作区中的版本将被视为新的有效版本。
+    执行追踪会将此版本更新至上游。
 
     **同步**
-    当您不持有文件、基于过期事实编辑，或本地不存在该文件时，
-    您的修改不具备事实效力，一切以上游最新版为准
-    执行追踪将 **同步上游事实到本地**
-    若需覆盖本地修改，必须显式指定 `--overwrite`
+    当您不持有文件、基于过时版本编辑，或本地不存在该文件时，
+    您的本地修改不具备版本效力，以上游最新版本为准。
+    执行追踪会将上游最新版本同步到本地。
+    如需覆盖本地修改，需显式指定 `--overwrite` 选项。
 
   hold: |
     **拿取文件：从上游库获得该文件的编辑权**
@@ -748,8 +747,6 @@ jv:
       as: 成功将此工作区的账户切换至 `%{account}`
       as_host: |
         切换到账户：`host/%{account}`
-        若 Host 身份受上游库认可，便可控制所有的表、映射
-        请牢记："*能力越大，责任越大*"
       add: 成功添加账户 `%{account}`！
       remove: 成功删除账户 `%{account}`！
       list:
@@ -1002,8 +999,8 @@ jv:
         **事实推进**
         5. 您可以在任何表中使用 `jv track` 推进文件版本
 
-        [[red]]**请牢记**：Host 并非 管理员模式，
-        而是对他人结构、历史与解释权的最终承担者。
+        [[red]]**请牢记**：
+        您现在是对他人结构、历史与解释权的最终承担者。
         您的每一次操作，都会成为他人必须接受的事实。[[/]]
 
   result:
