Improve semantic accuracy of hold/throw command descriptions

--- a/resources/locales/zh-CN.yml
+++ b/resources/locales/zh-CN.yml
@@ -268,8 +268,8 @@ jv:
     **文件操作**：
       move  <文件> <到>        - 安全地重命名文件                [[cyan]][远程][[/]]
       track <文件>             - 追踪文件内容到最新版本          [[cyan]][远程][[/]]
-      hold  <文件>             - 拿取文件，同步版本并获得编辑权  [[cyan]][远程][[/]]
-      throw <文件>             - 丢弃文件，同步版本并放弃编辑权  [[cyan]][远程][[/]]
+      hold  <文件>             - 拿取文件，访问上游以获得编辑权  [[cyan]][远程][[/]]
+      throw <文件>             - 丢弃文件，访问上游以放弃编辑权  [[cyan]][远程][[/]]
       jump  <文件> <版本>      - 将文件的版本跳转至其他版本      [[cyan]][远程][[/]]
 
     **内建文档**：
