--- a/resources/locales/zh-CN.yml
+++ b/resources/locales/zh-CN.yml
@@ -263,7 +263,6 @@ jv:
     **文件传递**：
       share <文件> <表> <描述> - 分享映射到其他表                [[cyan]][远程][[/]]
       share <分享ID>           - 将分享导入到当前表              [[cyan]][远程][[/]]
-      share <REF表> <文件>     - 从其他参考表中导入映射          [[cyan]][远程][[/]]
 
     **文件操作**：
       move  <文件> <到>        - 安全地重命名文件                [[cyan]][远程][[/]]
@@ -444,7 +443,12 @@ jv:
     jv share list - 查看传入的分享
     jv share see - 查看分享的详情
 
-    **提示**：import 命令可使用如下参数
+    **分享模式**
+    `jv share <文件> <表>` 命令可使用如下参数
+      --work - 启动编辑器模式，进行详细的分享控制
+
+    **导入模式**
+    `jv share <分享ID>` 命令可使用如下参数
       --safe - 安全导入，拒绝所有冲突，这是默认的方案
       --skip - 跳过所有冲突项
       --overwrite - 强制覆盖冲突的映射，危险的操作
@@ -573,6 +577,9 @@ jv:
       invalid_target_sheet: |
         您所给出的表 `%{sheet}` 在您的上下文中并不存在
         若您确定它存在，请使用 `jv update` 更新工作区
+
+      no_description: |
+        无法给定分享描述！
 
     sheet:
       align:
@@ -1285,3 +1292,11 @@ editor:
       new_version: 新
     content:
       arrow: ->
+
+  share_editor: |
+    # 您正在使用编辑器模式分享文件至其他表
+    # 以下文件将被分享至 `%{sheet}`：
+
+    %{shared_files}
+    ----------------------------------------------------------------------
+    # 此处填写更新描述，告诉 `%{sheet}` 的持有者 `%{holder}` 具体事项
